# ruleoak-py

./: NOTICE  README.md  pyproject.toml
docs/: approval.md  autogen.md  crewai.md  developer-guide.md  evidence-jsonl-v1.md  evidence-jsonl.md  getting-started.md  integrate-with-python-agent.md  langgraph.md  limitations.md  llamaindex.md  openai-agents.md  policy.md  redaction.md  replay.md  semantic-kernel.md  sinks.md  troubleshooting.md  website-links.md
docs/integrations/: autogen.md  crewai.md  langgraph.md  llamaindex.md  openai-agents.md  semantic-kernel.md
examples/approval_required/: README.md  run.py
examples/autogen_mock_agent/: README.md  run.py
examples/crewai_mock_tool/: README.md  run.py
examples/evidence_replay/: README.md  run.py
examples/generic_tool_wrapper/: README.md  run.py
examples/langgraph_mock_node/: README.md  run.py
examples/langgraph_ruleoak_guard/: quickstart.py
examples/llamaindex_mock_tool/: README.md  run.py
examples/openai_agents_mock_tool/: README.md  run.py
examples/policy_deny/: README.md  run.py
examples/redaction/: README.md  run.py
examples/semantic_kernel_mock_plugin/: README.md  (+1 more)
fixtures/: valid-agentic-evidence.jsonl
tests/: conftest.py  test_action_envelope.py  test_approval.py  test_cli.py  test_examples.py  test_langgraph_integration.py  test_langgraph_mock.py  test_openai_agents_mock.py  test_optional_framework_integrations.py  test_optional_integrations.py  test_policy.py  test_policy_specificity.py  test_redaction.py  test_replay.py  test_ruleoak_py_050.py  test_ruleoak_py_100.py  test_sinks.py
(+20 files in other folders)
