[project]
name = "ruleoak-py"
version = "1.0.0"
description = "Python bridge for RuleOak Evidence JSONL v1, manifests, and local flight recording."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [{ name = "Sun Shaobin", email = "hello@ruleoak.com" }]
keywords = ["ruleoak", "ai-agents", "evidence-jsonl", "flight-recorder", "agent-firewall"]

[project.scripts]
ruleoak-py = "ruleoak_py.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://ruleoak.com/developer-ecosystem.html#ruleoak-py"
Repository = "https://github.com/ruleoak/ruleoak-py"
Issues = "https://github.com/ruleoak/ruleoak-py/issues"

[project.optional-dependencies]
dev = ["pytest"]
